src/containers/dispute/dispute.scss
/* @define Dispute */
.Dispute {
  height: 100%;
  padding: 28px 15%;
  width: 100%;

  &-header {
    &-title {
      align-items: center;
      display: flex;
      margin: 11px 0 21px 0;

      &-identicon {
        margin-right: 18px;
      }
    }
  }

  &-action {
    display: flex;
    justify-content: space-between;
  }
}

